--- a/app/views/forms/menu-forms.html
+++ b/app/views/forms/menu-forms.html
@@ -18,6 +18,7 @@
 
       <ul class="govuk-list govuk-list--bullet">
         <li><a href="education/P1-start.html">a possible version of registering P1 children</a></li>
+        <li><a href="education-alternative/P1-start.html">registering P1 children - alternative - more in line with GDS guidelines</a></li>
         <li><a href="housing/start.html">a very rough illustration of a form for housing (DRAFT)</a></li>
         <li><a>example of a form with errors validation</a><strong class="govuk-tag red">coming soon</strong></li>
 
