--- a/app/views/useful-links.html
+++ b/app/views/useful-links.html
@@ -43,7 +43,7 @@
               <li><a href="https://resources.mygov.scot/design-standards/accessibility/" target="_blank" rel="noopener">GOV.SCOT Accessibility</a></li>
               <li><a href="https://github.com/UKHomeOffice/posters" target="_blank" rel="noopener">Home Office Do / Don't posters on Github</a></li>
               <li><a href="https://www.gov.uk/guidance/accessibility-requirements-for-public-sector-websites-and-apps" target="_blank" rel="noopener">Requirements for the public sector</a></li>
-              <li><a href="https://www.gov.uk/government/publications/understanding-disabilities-and-impairments-user-profiles" target="_blank" rel="noopener">Personas</a></li>
+              <li><a href="https://www.gov.uk/government{{ publicPath }}ations/understanding-disabilities-and-impairments-user-profiles" target="_blank" rel="noopener">Personas</a></li>
               <li><a href="https://contrastchecker.com/" target="_blank" rel="noopener">https://contrastchecker.com</a></li>
               <li><a href="https://www.opendyslexic.org/" target="_blank" rel="noopener">OpenDyslexic</a></li>
               <li><a href="http://pave-pdf.org/index.en.html" target="_blank" rel="noopener">Four steps to an accessible PDF - for PC only</a></li>
