improve some view in educ form + disable one link in the form list

--- a/app/views/forms/education/postcode-current.html
+++ b/app/views/forms/education/postcode-current.html
@@ -10,7 +10,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
       <h1 class="govuk-heading-l">
-          What's your current postcode?
+          What is your current postcode?
       </h1>
 
       <form class="form" method="post">
