--- a/app/views/forms/education/manual-address.html
+++ b/app/views/forms/education/manual-address.html
@@ -10,56 +10,20 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-l">
-          What's your address?
+          What is your actual address?
       </h1>
 
-      <p>As we cannot find your postcode, we can't verify your catchment school. You can still apply.</p>
+      <p>This is where we'll send letters.</p>
 
-{% from "input/macro.njk" import govukInput %}
-{% from "fieldset/macro.njk" import govukFieldset %}
+{% from "textarea/macro.njk" import govukTextarea %}
 
-  {{ govukInput({
-    label: {
-      html: 'Building and street <span class="govuk-visually-hidden">line 1 of 2</span>'
-    },
-    id: "address-line-1",
-    name: "address-line-1"
-  }) }}
-
-  {{ govukInput({
-    label: {
-      html: '<span class="govuk-visually-hidden">Building and street line 2 of 2</span>'
-    },
-    id: "address-line-2",
-    name: "address-line-2"
-  }) }}
-
-  {{ govukInput({
-    label: {
-      text: "Town or city"
-    },
-    classes: "govuk-!-width-two-thirds",
-    id: "address-town",
-    name: "address-town"
-  }) }}
-
-  {{ govukInput({
-    label: {
-      text: "County"
-    },
-    classes: "govuk-!-width-two-thirds",
-    id: "address-county",
-    name: "address-county"
-  }) }}
-
-  {{ govukInput({
-    label: {
-      text: "Postcode"
-    },
-    classes: "govuk-input--width-10",
-    id: "address-postcode",
-    name: "address-postcode"
-  }) }}
+{{ govukTextarea({
+  name: "address",
+  id: "address",
+  label: {
+    text: "Your address"
+  }
+}) }}
 
 {{ govukButton({
   "text": "Continue",
