add extra screen for CBL info

--- a/app/views/forms/housing/CBLcontact.html
+++ b/app/views/forms/housing/CBLcontact.html
@@ -34,7 +34,7 @@
             }
           },
           hint: {
-            text: "We may still contact you in anotherway if we can't reach you."
+            text: "We may still contact you in another way if we can't reach you."
           },
           items: [
             {
@@ -64,7 +64,8 @@
         }) }}
     
           {{ govukButton({
-            text: "End for now - More coming soon",
+            text: "Continue",
+            href: "/forms/housing/CBLinfo-housed.html",
             classes: "button-primary"
           }) }}
     </div>
