--- a/app/views/forms/education/info.html
+++ b/app/views/forms/education/info.html
@@ -10,8 +10,9 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
       <h1 class="govuk-heading-l">
-          We need some further information in case your catchment school is full
+          If you catchment school is full
         </h1>
+      <p>We need some further information in case your catchment school is full.</p>
       <p>We’ll ask you to provide proof of these answers later in the process.</p>
 
       {{ govukButton({
