--- a/app/views/forms/education/P1-start.html
+++ b/app/views/forms/education/P1-start.html
@@ -28,11 +28,14 @@
 
       {{ govukButton({
         text: "Start now",
-        href: "/forms/education/moving.html"
+        href: "/forms/education/declaration.html"
       }) }}
 
   
-
+      <div class="design-notes-box">
+          <h3 class="govuk-heading-s">Design notes:</h3>
+          <p>content of this page to be redrafted, add warning about only using the back link in the form, and unable to edit(?) - remove enrolment term</p>
+      </div>
     </div>
 </div>
 
