--- a/app/views/forms/education/info.html
+++ b/app/views/forms/education/info.html
@@ -2,7 +2,7 @@
 {% extends "layout-ERC.html" %}
 
 {% block pageTitle %}
-  Informaton
+  Information
 {% endblock %}
 
 {% block content %}
@@ -19,6 +19,11 @@
         "text": "Continue",
         href: "/forms/education/school-2nd.html"
         }) }}
+
+      <div class="design-notes-box">
+          <h3 class="govuk-heading-s">Design notes:</h3>
+          
+      </div>
     </div>
 </div>
 
