--- a/app/views/forms/education/parent-name.html
+++ b/app/views/forms/education/parent-name.html
@@ -19,7 +19,8 @@
         },
         id: "parent-first-name",
         name: "parent-first-name",
-        value: data['parent-first-name']
+        value: data['parent-first-name'],
+        classes: "govuk-input--width-20"
       }) }}
 
       {{ govukInput({
@@ -29,7 +30,8 @@
         },
         id: "parent-last-name",
         name: "parent-last-name",
-        value: data['parent-last-name']
+        value: data['parent-last-name'],
+        classes: "govuk-input--width-20"
       }) }}
 
 
