--- a/app/views/forms/education/postcode-with-address.html
+++ b/app/views/forms/education/postcode-with-address.html
@@ -58,9 +58,9 @@
 
       {{ govukButton({
         "text": "Continue",
-        href: "/forms/education/parent-name.html"
+        href: "/forms/education/moving.html"
         }) }}
-      <p><a href="postcode.html">Change my address</a></p>
+      <!--p><a href="postcode.html">Change my address</a></p-->
 
     </div>
 </div>
