add more design notes and change the summary - also change the routing for P1

--- a/app/views/forms/education/child-dob.html
+++ b/app/views/forms/education/child-dob.html
@@ -49,6 +49,10 @@
         "text": "Continue"
         }) }}
       </form>
+      <div class="design-notes-box">
+          <h3 class="govuk-heading-s">Design notes:</h3>
+          <p>Could we have some validation on the DOB? even if it's just checking that the year is either 2013 or 2014?</p>    
+      </div>
     </div>
 </div>
 
