--- a/app/views/forms/education/confirmation.html
+++ b/app/views/forms/education/confirmation.html
@@ -32,6 +32,14 @@
       <p class="govuk-!-margin-top-9">
         <a href="#" class="govuk-link">What did you think of this service?</a> (takes 30 seconds)
       </p>
+
+      <div class="design-notes-box">
+          <h3 class="govuk-heading-s">Design notes:</h3>
+          <p>guidance about what happen next will be drafted so we set expectations. At the moment, the text stating we have send an email only appears if an email address was entered. Could we maybe add the email address it was sent to on screen? (help the user in case they put a wrong email address and don't receive anything. How long does it take to receive the email - should we mention what to do if you didn't receive it within (10min? more) check their spam?</p>
+          <p>anything we will send in the email should also appear here as some won't receive it, and other will lose the email.</p>
+          <p>personalised "letter" will be here (as a link? in full?) maybe provide guidance about how to print or save as a pdf?</p>
+          <p>do we want a quick survey link to see what they think of the service?</p>
+      </div>
     </div>
   </div>
 {% endblock %}
