--- a/app/views/forms/education/denominational-or-non.html
+++ b/app/views/forms/education/denominational-or-non.html
@@ -24,9 +24,6 @@
             classes: "govuk-fieldset__legend--l"
           }
         },
-        hint: {
-          text: "Select the denominational or non denominational school for your catchment area."
-        },
         items: [
           {
             value: "Saint school example (denominational)",
@@ -44,6 +41,10 @@
         }) }}
 
       </form>
+      <div class="design-notes-box">
+          <h3 class="govuk-heading-s">Design notes:</h3>
+          <p>List of the schools from CAG to be double checked to see if we can remove abbreviations, or Thomas's instead of Thomass at the moment and make sure each name is exactly as the list we have for the alternative school, to avoid the school being present again in the second list. Heather will contact the person who can check this.</p>
+      </div>
     </div>
 </div>
 
