--- a/app/views/forms/education/info.html
+++ b/app/views/forms/education/info.html
@@ -22,7 +22,8 @@
 
       <div class="design-notes-box">
           <h3 class="govuk-heading-s">Design notes:</h3>
-          
+          <p>The content will be different, this is just to illustrate that we will address the priorities grouped after this point, with some guidance here. This is the screen just before selecting the alternative school so we will need to explain here briefly what happen is they pick another school, if they select None (you could be in any school) and that they can't pick the same school again.</p>
+          <p>After this page, we remove all texts which was there previously mentioning "if your catchment school is full" to avoid adding stress by repetition.</p>
       </div>
     </div>
 </div>
