--- a/app/views/forms/education/medical.html
+++ b/app/views/forms/education/medical.html
@@ -25,9 +25,6 @@
             classes: "govuk-fieldset__legend--l"
           }
         },
-        hint: {
-          text: "We use this information if your catchment school is full. We'll ask you for evidence of this later."
-        },
         items: [
           {
             value: "yes",
@@ -45,6 +42,10 @@
         }) }}
 
       </form>
+      <div class="design-notes-box">
+          <h3 class="govuk-heading-s">Design notes:</h3>
+          <p>This will be re-worded to make sure parents understand wy we ask and what conditions are relevant or not</p>
+      </div>
     </div>
 </div>
 
