--- a/app/views/forms/education/moving.html
+++ b/app/views/forms/education/moving.html
@@ -38,8 +38,7 @@
       }) }}
 
       {{ govukButton({
-        "text": "Continue",
-        href: "/forms/education/parent-name.html"
+        "text": "Continue"
         }) }}
       </form>
       <div class="design-notes-box">
