--- a/app/views/forms/education/sibling.html
+++ b/app/views/forms/education/sibling.html
@@ -20,13 +20,10 @@
         value: data['sibling'],
         fieldset: {
           legend: {
-            text: "Will your child have sibling(s) at the school when they start?",
+            text: "Will your child have a sibling at the school when they start?",
             isPageHeading: true,
             classes: "govuk-fieldset__legend--l"
           }
-        },
-        hint: {
-          text: "We use this information if your catchment school is full."
         },
         items: [
           {
