--- a/app/views/forms/education/single-details.html
+++ b/app/views/forms/education/single-details.html
@@ -18,7 +18,7 @@ Single parent or carer details
           id: "single-detail",
           value: data['single-detail'],
           label: {
-            text: "Give details if it would help the care of your child to go to the catchment school",
+            text: "Give details of how it helps childcare",
             classes: "govuk-!-font-size-36"
           }
         }) }}
@@ -29,6 +29,10 @@ Single parent or carer details
         }) }}
 
       </form>
+      <div class="design-notes-box">
+          <h3 class="govuk-heading-s">Design notes:</h3>
+          <p>This will be re-worded</p>
+      </div>
     </div>
 </div>
 
