--- a/app/assets/sass/patterns/_check-your-answers.scss
+++ b/app/assets/sass/patterns/_check-your-answers.scss
@@ -15,6 +15,7 @@ $erc-text-blue : #004269;
 
 .app-check-your-answers--short {
   @include govuk-media-query($from: desktop) {
+    border-top: 1px solid $govuk-border-colour;
     // to make group of q&a line up horizontally (unless there is just one group)
     width: 100%;
     // recommended for mostly short questions
@@ -26,6 +27,7 @@ $erc-text-blue : #004269;
 
 .app-check-your-answers--long {
   @include govuk-media-query($from: desktop) {
+    border-top: 1px solid $govuk-border-colour;
     // to make group of q&a line up horizontally (unless there is just one group)
     width: 100%;
     // recommended for mostly long questions
