--- a/app/views/forms/education/P1-start.html
+++ b/app/views/forms/education/P1-start.html
@@ -35,6 +35,7 @@
       <div class="design-notes-box">
           <h3 class="govuk-heading-s">Design notes:</h3>
           <p>content of this page to be redrafted, add warning about only using the back link in the form, and unable to edit(?) - remove enrolment term</p>
+          <p>PLEASE NOTE: on the following pages I didn't put a heading "Apply etc..." but there will be one, and we want to remove the privacy statement as it's in the footer - to confirm with Sarah Jane probably.</p>
       </div>
     </div>
 </div>
