--- a/app/views/forms/education/postcode.html
+++ b/app/views/forms/education/postcode.html
@@ -39,7 +39,7 @@
     <div class="design-notes-box">
         <h3 class="govuk-heading-s">Design notes:</h3>
         <p>Content  changes to make sure they understand it's the address the child will be living at, at the start of the term - As to be an ERC postcode</p>
-        <p>If the address is not found (new houses in ERC), we will have  the same message for everyone, Maidenhill is not treated differently, and possibly a link to the schools websites</p>
+        <p>If the address is not found (new houses in ERC), we will have  the same message for everyone, Maidenhill is not treated differently, and possibly a link to the schools websites and a phone number to contact the admission team</p>
     </div>
     </div>
 </div>
