fix typo in heading

--- a/app/views/forms/housing/CBLadd-person.html
+++ b/app/views/forms/housing/CBLadd-person.html
@@ -10,7 +10,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-l">
-        Who will be living with you
+        Who will be living with you?
       </h1>
       <p>Enter each person who will be living with you</p>
       {% from "input/macro.njk" import govukInput %}
