add alterntive pages for CBL

--- a/app/views/forms/housing/CBLaboutyou.html
+++ b/app/views/forms/housing/CBLaboutyou.html
@@ -67,6 +67,11 @@
       }) }}
 
 
+      <div class="design-notes-box">
+          <h3 class="govuk-heading-s">Design notes:</h3>
+         <p>we don't capture the gender of the applicant, what if it's a woman and she is pregnant? </p>
+      </div>
+
     </div>
 </div>
 
